allow to include controllers

--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "authors": [
         {
             "name": "Magento Expert Consulting Group",
-            "homepage": "http://magento.com/consulting",
+            "homepage": "http://magentocommerce.com/consulting",
             "role": "Maintainer"
         }
     ],
