--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "name": "magento-ecg/coding-standard",
     "description": "A set of PHP_CodeSniffer rules and sniffs.",
     "homepage": "https://github.com/magento-ecg/coding-standard",
+    "version": "3.0",
     "license": "MIT",
     "authors": [
         {
