--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,6 @@
         }
     ],
     "require": {
-        "php": ">=5.4.0",
-        "squizlabs/php_codesniffer": "^3.0"
+        "php": ">=5.4.0"
     }
 }
